--- a/style.css
+++ b/style.css
@@ -17,19 +17,10 @@ h1.bigtext {
     font-size: 60px;
 }
 
-h2 {
+h2, h4, p {
     font-family: 'Spectral', serif;
     color: rgb(255, 255, 255);
-}
-
-h4 {
-    font-family: 'Spectral', serif;
-    color: rgb(255, 255, 255);
-}
-
-p {
-    font-family: 'Spectral', serif;
-    color: rgb(255, 255, 255);
+    text-align: center;
 }
 
 .center {
