--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ a.link:hover::after {
 
 .button:hover {
     background-color: rgb(82, 0, 136);
+    transform: rotate(25deg) scale(1.17);
+    transition: transform .8s ease-in-out;
 }
 
 /* end of a link decoration */
@@ -118,3 +120,5 @@ img.gameimg {
         height: 70px;
     }
 }
+
+/* Animations */
