--- a/style.css
+++ b/style.css
@@ -101,6 +101,10 @@ img.gameimg {
     height: 150px;
 }
 
+a {
+    text-decoration: none;
+}
+
 /* Media */
 @media screen and (max-width: 680px) {
     h1 {
