--- a/games/cardgame/style.css
+++ b/games/cardgame/style.css
@@ -73,6 +73,47 @@ h2.notready {
   box-shadow: 0px 0px 30px 0px rgba(99, 155, 255, 0.67);
 }
 
+/* Desk */
+/*
+div.desk {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+img.desk {
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+img.dcard {
+  position: absolute;
+  width: 74px;
+  height: 96px;
+  z-index: 2;
+}
+img.card1 {
+  top: 50px;
+  left: 200px;
+  transform: rotateY(0deg) rotateX(30deg) rotate(-30deg);
+}
+img.card2 {
+  top: 70px;
+  left: 300px;
+  transform: rotateY(0deg) rotateX(30deg) rotate(-80deg);
+}
+img.card3 {
+  top: 120px;
+  left: 450px;
+  transform: rotateY(0deg) rotateX(30deg) rotate(145deg);
+}
+img.card4 {
+  top: 50px;
+  left: 500px;
+  transform: rotateY(0deg) rotateX(30deg) rotate(30deg);
+}
+*/
+
 
 /* Media */
 
