--- a/games/cardgame/style.css
+++ b/games/cardgame/style.css
@@ -29,9 +29,11 @@ h2.notready {
 /* Cards Menu */
 
 .card {
+  position: relative;
   width: 64px;
   height: 86px;
   transition: transform .2s;
+  z-index: 1;
 }
 
 .card:hover {
@@ -40,6 +42,7 @@ h2.notready {
 
 .cardHome {
   transform: rotateY(0deg) rotate(-30deg);
+  z-index: 2;
 }
 
 .cardHome:hover {
@@ -49,6 +52,7 @@ h2.notready {
   -webkit-box-shadow: 0px 0px 30px 0px rgba(255, 243, 0, 0.67);
   -moz-box-shadow: 0px 0px 30px 0px rgba(255, 243, 0, 0.67);
   box-shadow: 0px 0px 30px 0px rgba(255, 243, 0, 0.67);
+  z-index: 3;
 }
 
 .cardAbout:hover {
@@ -58,6 +62,7 @@ h2.notready {
   -webkit-box-shadow: 0px 0px 30px 0px rgba(172, 50, 50, 0.67);
   -moz-box-shadow: 0px 0px 30px 0px rgba(172, 50, 50, 0.67);
   box-shadow: 0px 0px 30px 0px rgba(172, 50, 50, 0.67);
+  z-index: 3;
 }
 
 .cardShots {
@@ -71,6 +76,7 @@ h2.notready {
   -webkit-box-shadow: 0px 0px 30px 0px rgba(99, 155, 255, 0.67);
   -moz-box-shadow: 0px 0px 30px 0px rgba(99, 155, 255, 0.67);
   box-shadow: 0px 0px 30px 0px rgba(99, 155, 255, 0.67);
+  z-index: 3;
 }
 
 /* Desk */
