--- a/style.css
+++ b/style.css
@@ -38,8 +38,17 @@ h2, h4, p {
     float: left;
     width: 33.33%;
 }
-
 .row3:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.column {
+    float: left;
+    width: 50%;
+}
+.row:after {
     content: "";
     display: table;
     clear: both;
@@ -115,6 +124,10 @@ a {
 
     .column3 {
       width: 100%;
+    }
+
+    .column {
+        width: 100%;
     }
 
     img.gameimg {
