--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ h2, h4, p {
     text-align: center;
 }
 
+h2.footer {
+    text-align: left;
+}
+
 .center {
     text-align: center;
     margin: auto;
