--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@ h2, h4, p {
     text-align: center;
 }
 
+h2.teammember {
+    text-align: unset;
+}
+
+h2.teamwork {
+    font-size: 70%;
+}
+
 h2.footer {
     text-align: left;
 }
@@ -132,9 +140,9 @@ a {
     float: left;
     color: rgb(143, 113, 99);
     text-align: center;
-    padding: 10px 12px;
+    padding: 12px 14px;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 17px;
 }
 
 .nav a:hover {
