--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 body {
-    background-color: rgb(22, 22, 22);
+    background-color: rgb(248, 177, 149);
 }
 
 /* text */
 
 h1 {
-    color: rgb(187, 169, 161);
+    color: rgb(246, 114, 128);
     font-size: 25px;
     font-family: 'Spectral', serif;
     text-align: center;
 }
 
 h1.bigtext {
-    color: rgb(143, 113, 99);
+    color: rgb(192, 108, 132);
     font-family: 'Exo 2', sans-serif;
     font-size: 55px;
 }
 
 h2, h4, p {
     font-family: 'Spectral', serif;
-    color: rgb(117, 117, 117);
+    color: rgb(108, 91, 123);
     text-align: center;
 }
 
@@ -74,29 +74,24 @@ a.link {
     display: inline-block;
     position: relative;
     text-decoration: none;
-    color: inherit;
+    color: rgb(53, 92, 125);
     z-index: 1;
 }
-  
+
 a.link::after {
     content: '';
     position: absolute;
     left: 0;
     bottom: .07em;
-    height: .2em;
+    height: .1em;
     width: 100%;
     background: linear-gradient(110deg, rgb(225, 245, 73), rgb(41, 208, 190), rgb(108, 184, 234), rgb(255, 89, 89));
     z-index: -1;
-    transition: height .25s cubic-bezier(.6,0,.4,1);
-}
-  
-a.link:hover::after {
-    height: .3em;
 }
 
 .button {
-    background-color: rgb(175, 105, 0);
-    border: none;
+    background-color: rgb(248, 177, 149);
+    border: 2px, medium, white;
     color: white;
     padding: 15px 32px;
     text-align: center;
@@ -106,7 +101,7 @@ a.link:hover::after {
 }
 
 .button:hover {
-    background-color: rgb(155, 93, 0);
+    background-color: rgb(248, 167, 135);
 }
 
 /* end of a link decoration */
@@ -121,8 +116,8 @@ img.game {
 }
 
 img.logo {
-    width: 200px;
-    height: 200px;
+    width: 32px;
+    height: 32px;
 }
 
 a {
@@ -132,13 +127,13 @@ a {
 /* nav */
 
 .nav {
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(246, 114, 128);
     overflow: hidden;
 }
 
 .nav a {
     float: left;
-    color: rgb(143, 113, 99);
+    color: rgb(108, 91, 123);
     text-align: center;
     padding: 12px 14px;
     text-decoration: none;
@@ -151,7 +146,7 @@ a {
 }
 
 .nav a.active {
-    background-color: rgb(143, 113, 99);;
+    background-color: rgb(192, 108, 132);
     color: rgb(255, 255, 255);
 }
 
@@ -178,10 +173,6 @@ a {
         height: 66px;
     }
 
-    img.logo {
-        width: 100px;
-        height: 100px;
-    }
 }
 
 /* Animations */
