--- a/style.css
+++ b/style.css
@@ -1,64 +1,50 @@
+/* Main Website */
 body {
-    background-color: rgb(248, 177, 149);
+    background-color: rgb(9, 12, 36);
 }
 
-/* text */
+section {
+	margin-bottom: 40px;
+}
 
-h1 {
-    color: rgb(246, 114, 128);
-    font-size: 25px;
-    font-family: 'Spectral', serif;
+h1, h2 {
+    color: rgb(83, 53, 74);
+    font-family: 'Yanone Kaffeesatz', sans-serif;
     text-align: center;
+    font-size: 32px;
 }
-
-h1.bigtext {
-    color: rgb(192, 108, 132);
-    font-family: 'Exo 2', sans-serif;
-    font-size: 55px;
+h2 {
+    font-size: 26px;
 }
-
-h2, h4, p {
-    font-family: 'Spectral', serif;
-    color: rgb(108, 91, 123);
+h3 {
+    color: rgb(166, 73, 66);
+    font-family: 'Yanone Kaffeesatz', sans-serif;
     text-align: center;
+    font-size: 24px;
 }
-
-h2.teammember {
-    text-align: unset;
+h4 {
+    color: rgb(223, 112, 104);
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    text-align: center;
+    font-size: 16px;
 }
-
-h2.teamwork {
-    font-size: 70%;
+p {
+    color: rgb(255, 120, 68)
 }
-
-h2.footer {
-    text-align: left;
-}
-
 .center {
     text-align: center;
-    margin: auto;
-    width: 50%;
-    padding: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
-
-/* end of text */
-
-/* columns */
-
-.column3 {
-    float: left;
-    width: 33.33%;
-}
-.row3:after {
-    content: "";
-    display: table;
-    clear: both;
+img.logo {
+    width: 96px;
+    height: 96px;
 }
 
 .column {
     float: left;
-    width: 50%;
+    width: 33.33%;
 }
 .row:after {
     content: "";
@@ -66,113 +52,65 @@ h2.footer {
     clear: both;
 }
 
-/* end of columns */
-
-/* a link decoration */
-
-a.link {
-    display: inline-block;
-    position: relative;
-    text-decoration: none;
-    color: rgb(53, 92, 125);
-    z-index: 1;
-}
-
-a.link::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: .07em;
-    height: .1em;
-    width: 100%;
-    background: linear-gradient(110deg, rgb(225, 245, 73), rgb(41, 208, 190), rgb(108, 184, 234), rgb(255, 89, 89));
-    z-index: -1;
-}
-
-.button {
-    background-color: rgb(248, 177, 149);
-    border: 2px, medium, white;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-}
-
-.button:hover {
-    background-color: rgb(248, 167, 135);
-}
-
-/* end of a link decoration */
-
-div.game {
-    display: inline-block;
-}
-
-img.game {
-    width: 132px;
-    height: 132px;
-}
-
-img.logo {
-    width: 32px;
-    height: 32px;
-}
-
+/* Links */
 a {
     text-decoration: none;
+    color: rgb(255, 120, 68);
+    width: max-content;
+    margin: 0 auto;
+}
+a:hover {
+    color: rgb(218, 90, 40)
 }
 
-/* nav */
-
-.nav {
-    background-color: rgb(248, 167, 135);
-    overflow: hidden;
+/* Game */
+div.game {
+    position: relative;
+}
+img.game {
+    position: absolute;
+    left: 50%;
+}
+a.os {
+    font-size: 16px
 }
 
-.nav a {
-    float: left;
-    color: rgb(108, 91, 123);
-    text-align: center;
-    padding: 12px 14px;
+/* Navigation */
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    padding: 10px;
+}
+  
+nav a {
+    color: #fff;
     text-decoration: none;
-    font-size: 17px;
 }
 
-.nav a:hover {
-    background-color: rgb(221, 221, 221);
-    color: rgb(0, 0, 0);
+li.social {
+    font-size: 16px;
 }
-
-.nav a.active {
-    background-color: rgb(248, 177, 149);
-    color: rgb(255, 255, 255);
+  
+.left-menu {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
-
-/* Media */
-@media screen and (max-width: 1000px) {
-    h1 {
-        font-size: 25px;
-    }
-
-    h1.bigtext {
-        font-size: 40px;
-    }
-
-    .column3 {
-      width: 100%;
-    }
-
-    .column {
-        width: 100%;
-    }
-
-    img.game {
-        width: 66px;
-        height: 66px;
-    }
-
+  
+.left-menu li {
+    margin-right: 20px;
 }
-
-/* Animations */
+  
+.right-menu {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+  
+.right-menu li {
+    margin-left: 20px;
+}
